--- a/assets/css/vertical-layout-light/style.css
+++ b/assets/css/vertical-layout-light/style.css
@@ -55,7 +55,7 @@ body {
   line-height: 1.5;
   color: #1F1F1F;
   text-align: left;
-  background-color:white;
+  background-color:whitesmoke;
 }
 
 [tabindex="-1"]:focus:not(:focus-visible) {
@@ -200,8 +200,6 @@ table {
 }
 
 caption {
-  /*padding-top: 1.125rem 1.375rem;*/
-  /*padding-bottom: 1.125rem 1.375rem;*/
   color: #6c757d;
   text-align: left;
   caption-side: bottom;
@@ -1594,13 +1592,14 @@ select.tt-hint:focus::-ms-value {
 
 #pic{
   position: absolute;
-  right: -9.3rem;
+  right: -2.3rem;
 }
 
 #pic01{
   position: absolute;
-  right: -9.3rem;
+  right: -2.3rem;
 }
+
 .col-form-label {
   padding-top: calc(0.875rem + 1px);
   padding-bottom: calc(0.875rem + 1px);
@@ -4181,6 +4180,7 @@ button{
   padding-left: 0;
   margin-bottom: 0;
   list-style: none;
+
 }
 
 .nav-link {
@@ -4199,7 +4199,8 @@ button{
 }
 
 .nav-tabs {
-  border-bottom: 1px solid #ebedf2;
+  border-bottom: 1px solid #ebedf2
+
 }
 
 .nav-tabs .nav-link {
@@ -4270,6 +4271,7 @@ button{
   align-items: center;
   justify-content: space-between;
   padding: 0.5rem 1rem;
+
 }
 
 .navbar .container,
@@ -4278,6 +4280,7 @@ button{
   flex-wrap: wrap;
   align-items: center;
   justify-content: space-between;
+
 }
 
 .navbar-brand {
@@ -4300,6 +4303,7 @@ button{
   padding-left: 0;
   margin-bottom: 0;
   list-style: none;
+
 }
 
 .navbar-nav .nav-link {
@@ -13734,8 +13738,6 @@ body.avgrund-active {
 
 /* Sidebar */
 .sidebar {
-  position: relative;
-  display: flex;
   min-height: calc(100vh - 60px);
   background:#CAF0F8;
   font-family: "Nunito", sans-serif;
@@ -14189,6 +14191,26 @@ body.avgrund-active {
   padding: .75rem;
 }
 
+.navbar .navbar-menu-wrapper .navbar-nav .nav-item.nav-search .input-group .form-control, .navbar .navbar-menu-wrapper .navbar-nav .nav-item.nav-search .asColorPicker-wrap .form-control, .navbar .navbar-menu-wrapper .navbar-nav .nav-item.nav-search .input-group .asColorPicker-input, .navbar .navbar-menu-wrapper .navbar-nav .nav-item.nav-search .asColorPicker-wrap .asColorPicker-input, .navbar .navbar-menu-wrapper .navbar-nav .nav-item.nav-search .input-group .dataTables_wrapper select, .dataTables_wrapper .navbar .navbar-menu-wrapper .navbar-nav .nav-item.nav-search .input-group select, .navbar .navbar-menu-wrapper .navbar-nav .nav-item.nav-search .asColorPicker-wrap .dataTables_wrapper select, .dataTables_wrapper .navbar .navbar-menu-wrapper .navbar-nav .nav-item.nav-search .asColorPicker-wrap select, .navbar .navbar-menu-wrapper .navbar-nav .nav-item.nav-search .input-group .jsgrid .jsgrid-table .jsgrid-filter-row input[type=text], .jsgrid .jsgrid-table .jsgrid-filter-row .navbar .navbar-menu-wrapper .navbar-nav .nav-item.nav-search .input-group input[type=text], .navbar .navbar-menu-wrapper .navbar-nav .nav-item.nav-search .asColorPicker-wrap .jsgrid .jsgrid-table .jsgrid-filter-row input[type=text], .jsgrid .jsgrid-table .jsgrid-filter-row .navbar .navbar-menu-wrapper .navbar-nav .nav-item.nav-search .asColorPicker-wrap input[type=text],
+.navbar .navbar-menu-wrapper .navbar-nav .nav-item.nav-search .input-group .jsgrid .jsgrid-table .jsgrid-filter-row select, .jsgrid .jsgrid-table .jsgrid-filter-row .navbar .navbar-menu-wrapper .navbar-nav .nav-item.nav-search .input-group select,
+.navbar .navbar-menu-wrapper .navbar-nav .nav-item.nav-search .asColorPicker-wrap .jsgrid .jsgrid-table .jsgrid-filter-row select, .jsgrid .jsgrid-table .jsgrid-filter-row .navbar .navbar-menu-wrapper .navbar-nav .nav-item.nav-search .asColorPicker-wrap select, .navbar .navbar-menu-wrapper .navbar-nav .nav-item.nav-search .input-group .jsgrid .jsgrid-table .jsgrid-filter-row input[type=number], .jsgrid .jsgrid-table .jsgrid-filter-row .navbar .navbar-menu-wrapper .navbar-nav .nav-item.nav-search .input-group input[type=number], .navbar .navbar-menu-wrapper .navbar-nav .nav-item.nav-search .asColorPicker-wrap .jsgrid .jsgrid-table .jsgrid-filter-row input[type=number], .jsgrid .jsgrid-table .jsgrid-filter-row .navbar .navbar-menu-wrapper .navbar-nav .nav-item.nav-search .asColorPicker-wrap input[type=number], .navbar .navbar-menu-wrapper .navbar-nav .nav-item.nav-search .input-group .select2-container--default .select2-selection--single, .select2-container--default .navbar .navbar-menu-wrapper .navbar-nav .nav-item.nav-search .input-group .select2-selection--single, .navbar .navbar-menu-wrapper .navbar-nav .nav-item.nav-search .asColorPicker-wrap .select2-container--default .select2-selection--single, .select2-container--default .navbar .navbar-menu-wrapper .navbar-nav .nav-item.nav-search .asColorPicker-wrap .select2-selection--single, .navbar .navbar-menu-wrapper .navbar-nav .nav-item.nav-search .input-group .select2-container--default .select2-selection--single .select2-search__field, .select2-container--default .select2-selection--single .navbar .navbar-menu-wrapper .navbar-nav .nav-item.nav-search .input-group .select2-search__field, .navbar .navbar-menu-wrapper .navbar-nav .nav-item.nav-search .asColorPicker-wrap .select2-container--default .select2-selection--single .select2-search__field, .select2-container--default .select2-selection--single .navbar .navbar-menu-wrapper .navbar-nav .nav-item.nav-search .asColorPicker-wrap .select2-search__field, .navbar .navbar-menu-wrapper .navbar-nav .nav-item.nav-search .input-group .typeahead, .navbar .navbar-menu-wrapper .navbar-nav .nav-item.nav-search .asColorPicker-wrap .typeahead,
+.navbar .navbar-menu-wrapper .navbar-nav .nav-item.nav-search .input-group .tt-query,
+.navbar .navbar-menu-wrapper .navbar-nav .nav-item.nav-search .asColorPicker-wrap .tt-query,
+.navbar .navbar-menu-wrapper .navbar-nav .nav-item.nav-search .input-group .tt-hint,
+.navbar .navbar-menu-wrapper .navbar-nav .nav-item.nav-search .asColorPicker-wrap .tt-hint,
+.navbar .navbar-menu-wrapper .navbar-nav .nav-item.nav-search .input-group .input-group-text,
+.navbar .navbar-menu-wrapper .navbar-nav .nav-item.nav-search .asColorPicker-wrap .input-group-text {
+  background: transparent;
+  border: 0;
+  color: #000;
+  padding: 0;
+}
+
+.navbar .navbar-menu-wrapper .navbar-nav .nav-item.nav-search .input-group .input-group-text i, .navbar .navbar-menu-wrapper .navbar-nav .nav-item.nav-search .asColorPicker-wrap .input-group-text i {
+  font-size: 1.25rem;
+  color: #6C7383;
+}
+
 .navbar .navbar-menu-wrapper .navbar-nav .nav-item.nav-settings {
   margin: 0;
 }
@@ -14601,10 +14623,7 @@ body.avgrund-active {
     position: absolute;
     height: 100%;
     -webkit-box-shadow: 0 0 3px 1px #a7a3a3;
-    /* Safari 3-4, iOS 4.0.2 - 4.2, Android 2.3+ */
-    /* Firefox 3.5 - 3.6 */
     box-shadow: 0 0 3px 1px #a7a3a3;
-    /* Opera 10.5, IE 9, Firefox 4+, Chrome 6+, iOS 5 */
   }
   .sidebar-absolute .main-panel {
     width: 100%;
@@ -14731,5 +14750,102 @@ body.avgrund-active {
 .settings-panel .sidebar-bg-options.selected {
   background: #e6e9ed;
 }
+
+#settings-trigger i {
+  color: #ffffff;
+  font-size: 1rem;
+  line-height: 1rem;
+}
+
+.rtl #settings-trigger {
+  right: auto;
+  left: 30px;
+}
+
+@media (max-width: 991px) {
+  #settings-trigger {
+    display: none;
+  }
+}
+
+
+
+/* sign in form */
+
+.main {
+  font-family: Arial, sans-serif;
+  /*display: flex;*/
+  justify-content: center;
+  /*align-items: center;*/
+  /*!*height: 100vh;*!*/
+  /*margin: 0;*/
+}
+
+.signIn {
+  position: relative;
+  top:150px;
+  left: 430px;
+  background: linear-gradient(to right bottom,#737DFE,#FFCAC9);
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.sign-in-form {
+  justify-content: center;
+  position: relative;
+  width: 500px;
+  height: 300px;
+  margin: auto;
+}
+
+.sign-in-form h2 {
+  position: relative;
+  top:10px;
+  text-align: center;
+  font-weight: bold;
+  color: black;
+
+}
+
+.mainForm {
+  position: relative;
+  top: 40px;
+  margin-bottom: 35px;
+}
+
+.mainForm label {
+  display: block;
+  margin-bottom: 5px;
+  font-weight: bold;
+}
+
+.mainForm input {
+  position: relative;
+  left: 70px;
+  width: 70%;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  box-sizing: border-box;
+}
+
+#btnSignIn {
+  position: relative;
+  width: 30%;
+  padding: 10px;
+  top: 30px;
+  background-color: #07A3B2;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  font-size: 16px;
+  cursor: pointer;
+  left: 170px;
+}
+
+/*#btnSignIn:hover {*/
+/*  background-color:lightskyblue;*/
+/*}*/
 
 
