--- a/assets/css/vertical-layout-light/style.css
+++ b/assets/css/vertical-layout-light/style.css
@@ -14844,8 +14844,8 @@ body.avgrund-active {
   left: 170px;
 }
 
-/*#btnSignIn:hover {*/
-/*  background-color:lightskyblue;*/
-/*}*/
+.swal2-modal{
+  flex-direction: column;
+}
 
 
